plan page JS WIP

--- a/plan.html
+++ b/plan.html
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="coffee_plan--info_box">
-                    <div class="coffee_plan--info_title_box plan-toggler1">
+                    <div class="coffee_plan--info_title_box plan-toggler">
                         <h1 class="coffee_plan--info_title">How do you drink your coffee?</h1>
                         <button class="coffee_plan--toggler">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
@@ -113,7 +113,7 @@
                         </button>
                     </div>
 
-                    <div class="coffee_plan--card_box plan-card1">
+                    <div class="coffee_plan--card_box">
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Capsule</h3>
                             <p class="coffee_plan--card_desc">Compatible with Nespresso systems and similar brewers</p>
@@ -132,7 +132,7 @@
                         </div>
                     </div>
 
-                    <div class="coffee_plan--info_title_box plan-toggler2">
+                    <div class="coffee_plan--info_title_box plan-toggler">
                         <h1 class="coffee_plan--info_title">What type of coffee?</h1>
                         <button class="coffee_plan--toggler">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
@@ -144,7 +144,7 @@
                         </button>
                     </div>
 
-                    <div class="coffee_plan--card_box plan-card2">
+                    <div class="coffee_plan--card_box">
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Single Origin</h3>
                             <p class="coffee_plan--card_desc">Distinct, high quality coffee from a specific family-owned
@@ -164,7 +164,7 @@
                         </div>
                     </div>
 
-                    <div class="coffee_plan--info_title_box plan-toggler3">
+                    <div class="coffee_plan--info_title_box plan-toggler">
                         <h1 class="coffee_plan--info_title">How much would you like?</h1>
                         <button class="coffee_plan--toggler">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
@@ -176,7 +176,7 @@
                         </button>
                     </div>
 
-                    <div class="coffee_plan--card_box plan-card3">
+                    <div class="coffee_plan--card_box">
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">250g</h3>
                             <p class="coffee_plan--card_desc">Perfect for the solo drinker. Yields about 12 delicious
@@ -196,7 +196,7 @@
                         </div>
                     </div>
 
-                    <div class="coffee_plan--info_title_box plan-toggler4">
+                    <div class="coffee_plan--info_title_box plan-toggler">
                         <h1 class="coffee_plan--info_title">Want us to grind them?</h1>
                         <button class="coffee_plan--toggler">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
@@ -208,7 +208,7 @@
                         </button>
                     </div>
 
-                    <div class="coffee_plan--card_box plan-card4">
+                    <div class="coffee_plan--card_box">
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Wholebean</h3>
                             <p class="coffee_plan--card_desc">Best choice if you cherish the full sensory experience</p>
@@ -227,7 +227,7 @@
                         </div>
                     </div>
 
-                    <div class="coffee_plan--info_title_box plan-toggler5">
+                    <div class="coffee_plan--info_title_box plan-toggler">
                         <h1 class="coffee_plan--info_title">How often should we deliver?</h1>
                         <button class="coffee_plan--toggler">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
@@ -239,7 +239,7 @@
                         </button>
                     </div>
 
-                    <div class="coffee_plan--card_box plan-card5">
+                    <div class="coffee_plan--card_box">
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Every week</h3>
                             <p class="coffee_plan--card_desc">$7.20 per shipment. Includes free first-class shipping.
