home-hero, about-hero, plan-hero sections made adaptive to tablet

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h1 class="collection_title">our collection</h1>
                 <div class="collection_wrapper">
                     <div class="collection_item">
-                        <img src="/img/danche.png" alt="">
+                        <img class="collection_item--img" src="/img/danche.png" alt="">
                         <div class="collection_item--wrapper">
                             <h2 class="collection_item--title">Danche</h2>
                             <p class="collection_item--desc">Ethiopian hand-harvested blend densely packed with vibrant
@@ -71,7 +71,7 @@
                     </div>
 
                     <div class="collection_item">
-                        <img src="/img/Gran Espresso.png" alt="">
+                        <img class="collection_item--img" src="/img/Gran Espresso.png" alt="">
                         <div class="collection_item--wrapper">
                             <h2 class="collection_item--title">Gran Espresso</h2>
                             <p class="collection_item--desc">Light and flavorful blend with cocoa and black pepper for
@@ -81,7 +81,7 @@
                     </div>
 
                     <div class="collection_item">
-                        <img src="/img/piccollo.png" alt="">
+                        <img class="collection_item--img" src="/img/piccollo.png" alt="">
                         <div class="collection_item--wrapper">
                             <h2 class="collection_item--title">Piccollo</h2>
                             <p class="collection_item--desc">Mild and smooth blend featuring notes of toasted almond and
@@ -91,7 +91,7 @@
                     </div>
 
                     <div class="collection_item">
-                        <img src="/img/planalto.png" alt="">
+                        <img class="collection_item--img" src="/img/planalto.png" alt="">
                         <div class="collection_item--wrapper">
                             <h2 class="collection_item--title">Planalto</h2>
                             <p class="collection_item--desc">Brazilian dark roast with rich and velvety body, and hints
