hamburger button created WIP

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                     <a href="./plan.html" class="navbar_link">Create your plan</a>
                 </li>
             </ul>
+
+            <button class="header_toggler">
+                <span class="header_toggler--line"></span>
+                <span class="header_toggler--line"></span>
+                <span class="header_toggler--line"></span>
+            </button>
         </nav>
     </header>
 
