home-collection-made adaptive to tablet

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee - Roasters</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> -->
 
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
@@ -62,7 +62,7 @@
                 <div class="collection_wrapper">
                     <div class="collection_item">
                         <img class="collection_item--img" src="/img/danche.png" alt="">
-                        <div class="collection_item--wrapper">
+                        <div class="collection_item--wrapper_right">
                             <h2 class="collection_item--title">Danche</h2>
                             <p class="collection_item--desc">Ethiopian hand-harvested blend densely packed with vibrant
                                 fruit notes.
@@ -72,7 +72,7 @@
 
                     <div class="collection_item">
                         <img class="collection_item--img" src="/img/Gran Espresso.png" alt="">
-                        <div class="collection_item--wrapper">
+                        <div class="collection_item--wrapper_left">
                             <h2 class="collection_item--title">Gran Espresso</h2>
                             <p class="collection_item--desc">Light and flavorful blend with cocoa and black pepper for
                                 an intense experience.
@@ -82,7 +82,7 @@
 
                     <div class="collection_item">
                         <img class="collection_item--img" src="/img/piccollo.png" alt="">
-                        <div class="collection_item--wrapper">
+                        <div class="collection_item--wrapper_right">
                             <h2 class="collection_item--title">Piccollo</h2>
                             <p class="collection_item--desc">Mild and smooth blend featuring notes of toasted almond and
                                 dried cherry.
@@ -92,7 +92,7 @@
 
                     <div class="collection_item">
                         <img class="collection_item--img" src="/img/planalto.png" alt="">
-                        <div class="collection_item--wrapper">
+                        <div class="collection_item--wrapper_left">
                             <h2 class="collection_item--title">Planalto</h2>
                             <p class="collection_item--desc">Brazilian dark roast with rich and velvety body, and hints
                                 of fruits and nuts.
