--- a/plan.html
+++ b/plan.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee - Roasters</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> -->
 
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
@@ -260,10 +260,13 @@
                     <div class="coffee_plan--summary">
                         <div class="coffee_plan--summary_content">
                             <h4 class="coffee_plan--summary_title">Order Summary</h4>
-                            <p class="coffee_plan--summary_desc">“I drink my coffee using Capsules, with a _____ type of
+                            <p class="coffee_plan--summary_desc">“I drink my coffee using <span
+                                    style="color: var(--text-color-primary);">Capsules</span>, with a
+                                <span style="color: var(--text-color-primary);"> _____ </span> type of
                                 bean.
-                                _____ , sent to
-                                me _____.”</p>
+                                <span style="color: var(--text-color-primary);">_____</span> , sent to
+                                me <span style="color: var(--text-color-primary);">_____</span>.”
+                            </p>
                         </div>
                     </div>
 
