--- a/index.html
+++ b/index.html
@@ -120,24 +120,33 @@
                     <div class="promo-card__box">
                         <div class="promo-card">
                             <img class="promo-card__img" src="./img/home-promo(1).png" alt="">
-                            <h3 class="promo-card__title">Best quality</h3>
-                            <p class="promo-card__description">Discover an endless variety of the world’s best artisan
-                                coffee
-                                from each of our roasters.</p>
+                            <div class="promo-card__info">
+                                <h3 class="promo-card__title">Best quality</h3>
+                                <p class="promo-card__description">Discover an endless variety of the world’s best
+                                    artisan
+                                    coffeefrom each of our roasters.</p>
+                            </div>
                         </div>
 
                         <div class="promo-card">
                             <img class="promo-card__img" src="./img/home-promo(2).png" alt="">
-                            <h3 class="promo-card__title">Exclusive benefits</h3>
-                            <p class="promo-card__description">Special offers and swag when you subscribe, including 30%
-                                off your first shipment.</p>
+                            <div class="promo-card__info">
+                                <h3 class="promo-card__title">Exclusive benefits</h3>
+                                <p class="promo-card__description">Special offers and swag when you subscribe, including
+                                    30%
+                                    off your first shipment.</p>
+
+                            </div>
                         </div>
 
                         <div class="promo-card">
                             <img class="promo-card__img" src="./img/home-promo(3).png" alt="">
-                            <h3 class="promo-card__title">Free shipping</h3>
-                            <p class="promo-card__description">We cover the cost and coffee is delivered fast. Peak
-                                freshness: guaranteed.</p>
+                            <div class="promo-card__info">
+                                <h3 class="promo-card__title">Free shipping</h3>
+                                <p class="promo-card__description">We cover the cost and coffee is delivered fast. Peak
+                                    freshness: guaranteed.</p>
+
+                            </div>
                         </div>
                     </div>
                 </div>
