about-hero and about-collection sections made mobile friendly 100%

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
         </section>
 
         <section class="mission">
-            <div style="padding: 150px 100px;" class="mission_wrapper container">
+            <div class="mission_wrapper container">
                 <img src="/img/coffee-cup.png" alt="img of a cup of coffee" class="mission_img">
                 <div class="mission_content-wrapper">
                     <h1 class="mission_title">Our commitment</h1>
