--- a/plan.html
+++ b/plan.html
@@ -283,6 +283,27 @@
         </section>
     </main>
 
+    <!-- <section class="modal">
+        <div class="modal_wrapper">
+            <div class="modal_title--wrapper">
+                <h1 class="modal_title">order Summary</h1>
+            </div>
+            <div class="modal_content--wrapper">
+                <h3 class="modal_desc">“I drink my coffee as <span style="color: var(--primary-color)">Filter</span>, with a
+                    <span style="color: var(--primary-color)">Decaf</span> type of bean. <span
+                        style="color: var(--primary-color)">250g</span> ground ala <span
+                        style="color: var(--primary-color)">Cafetiére</span>,
+                    sent to me <span style="color: var(--primary-color)">Every Week</span>.”</h3>
+                <p class="modal_confirmation">Is this correct? You can proceed to checkout or go back to plan selection if
+                    something is off. Subscription discount codes can also be redeemed at the checkout. </p>
+                <div class="modal_checkout">
+                    <h3 class="modal_price">$14.00/ mo</h3>
+                    <div class="button">Checkout</div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
     <footer class="site-footer">
         <nav class="footer container">
             <a href="/index.html" class="navbar_logo">
