plan section site modal created WIP

--- a/plan.html
+++ b/plan.html
@@ -276,33 +276,40 @@
                     </div>
 
                     <div style="display: flex; justify-content: flex-end;">
-                        <div style="margin: 40px 0;" class="button">Create me plan</div>
+                        <div data-modal-open class="button" style="margin: 40px 0;">Create me plan</div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
 
-    <!-- <section class="modal">
+    <section class="modal">
         <div class="modal_wrapper">
-            <div class="modal_title--wrapper">
-                <h1 class="modal_title">order Summary</h1>
-            </div>
-            <div class="modal_content--wrapper">
-                <h3 class="modal_desc">“I drink my coffee as <span style="color: var(--primary-color)">Filter</span>, with a
-                    <span style="color: var(--primary-color)">Decaf</span> type of bean. <span
-                        style="color: var(--primary-color)">250g</span> ground ala <span
-                        style="color: var(--primary-color)">Cafetiére</span>,
-                    sent to me <span style="color: var(--primary-color)">Every Week</span>.”</h3>
-                <p class="modal_confirmation">Is this correct? You can proceed to checkout or go back to plan selection if
-                    something is off. Subscription discount codes can also be redeemed at the checkout. </p>
-                <div class="modal_checkout">
-                    <h3 class="modal_price">$14.00/ mo</h3>
-                    <div class="button">Checkout</div>
+            <div class="modal_content">
+                <div class="modal_title--wrapper">
+                    <h1 class="modal_title">order Summary</h1>
+                </div>
+                <div class="modal_content--wrapper">
+                    <h3 class="modal_desc">“I drink my coffee as <span
+                            style="color: var(--primary-color)">Filter</span>,
+                        with a
+                        <span style="color: var(--primary-color)">Decaf</span> type of bean. <span
+                            style="color: var(--primary-color)">250g</span> ground ala <span
+                            style="color: var(--primary-color)">Cafetiére</span>,
+                        sent to me <span style="color: var(--primary-color)">Every Week</span>.”
+                    </h3>
+                    <p class="modal_confirmation">Is this correct? You can proceed to checkout or go back to plan
+                        selection
+                        if
+                        something is off. Subscription discount codes can also be redeemed at the checkout. </p>
+                    <div class="modal_checkout">
+                        <h3 class="modal_price">$14.00/ mo</h3>
+                        <div class="button">Checkout</div>
+                    </div>
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <footer class="site-footer">
         <nav class="footer container">
