create-plan section changed

--- a/plan.html
+++ b/plan.html
@@ -119,22 +119,29 @@
                     </div>
 
                     <div class="coffee_plan--card_box">
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">Capsule</h3>
-                            <p class="coffee_plan--card_desc">Compatible with Nespresso systems and similar brewers</p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio1">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">Capsule</h3>
+                                <p class="coffee_plan--card_desc">Compatible with Nespresso systems and similar brewers</p>
+                            </div>
+                        </label>
 
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">Filter</h3>
-                            <p class="coffee_plan--card_desc">For pour over or drip methods like Aeropress, Chemex, and
-                                V60</p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio1">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">Filter</h3>
+                                <p class="coffee_plan--card_desc">For pour over or drip methods like Aeropress, Chemex, and V60</p>
+                            </div>
+                        </label>
 
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">Espresso</h3>
-                            <p class="coffee_plan--card_desc">Dense and finely ground beans for an intense, flavorful
-                                experience</p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio1">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">Espresso</h3>
+                                <p class="coffee_plan--card_desc">Dense and finely ground beans for an intense, flavorful experience</p>
+                            </div>
+                        </label>
                     </div>
 
                     <div class="coffee_plan--info_title_box plan-toggler">
@@ -150,23 +157,29 @@
                     </div>
 
                     <div class="coffee_plan--card_box">
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">Single Origin</h3>
-                            <p class="coffee_plan--card_desc">Distinct, high quality coffee from a specific family-owned
-                                farm</p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio2">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">Single Origin</h3>
+                                <p class="coffee_plan--card_desc">Distinct, high quality coffee from a specific family-owned farm</p>
+                            </div>
+                        </label>
 
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">Decaf</h3>
-                            <p class="coffee_plan--card_desc">Just like regular coffee, except the caffeine has been
-                                removed</p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio2">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">Decaf</h3>
+                                <p class="coffee_plan--card_desc">Just like regular coffee, except the caffeine has been removed</p>
+                            </div>
+                        </label>
 
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">Blended</h3>
-                            <p class="coffee_plan--card_desc">Combination of two or three dark roasted beans of organic
-                                coffees</p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio2">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">Blended</h3>
+                                <p class="coffee_plan--card_desc">Combination of two or three dark roasted beans of organic coffees</p>
+                            </div>
+                        </label>
                     </div>
 
                     <div class="coffee_plan--info_title_box plan-toggler">
@@ -182,23 +195,32 @@
                     </div>
 
                     <div class="coffee_plan--card_box">
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">250g</h3>
-                            <p class="coffee_plan--card_desc">Perfect for the solo drinker. Yields about 12 delicious
-                                cups.</p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio3">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">250g</h3>
+                                <p class="coffee_plan--card_desc">Perfect for the solo drinker. Yields about 12 delicious
+                                    cups.</p>
+                            </div>
+                        </label>
 
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">500g</h3>
-                            <p class="coffee_plan--card_desc">Perfect option for a couple. Yields about 40 delectable
-                                cups.</p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio3">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">500g</h3>
+                                <p class="coffee_plan--card_desc">Perfect option for a couple. Yields about 40 delectable
+                                    cups.</p>
+                            </div>
+                        </label>
 
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">1000g</h3>
-                            <p class="coffee_plan--card_desc">Perfect for offices and events. Yields about 90 delightful
-                                cups.</p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio3">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">1000g</h3>
+                                <p class="coffee_plan--card_desc">Perfect for offices and events. Yields about 90 delightful
+                                    cups.</p>
+                            </div>
+                        </label>
                     </div>
 
                     <div class="coffee_plan--info_title_box plan-toggler">
@@ -214,22 +236,29 @@
                     </div>
 
                     <div class="coffee_plan--card_box">
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">Wholebean</h3>
-                            <p class="coffee_plan--card_desc">Best choice if you cherish the full sensory experience</p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio4">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">Wholebean</h3>
+                                <p class="coffee_plan--card_desc">Best choice if you cherish the full sensory experience</p>
+                            </div>
+                        </label>
 
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">Filter</h3>
-                            <p class="coffee_plan--card_desc">For drip or pour-over coffee methods such as V60 or
-                                Aeropress</p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio4">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">Filter</h3>
+                                <p class="coffee_plan--card_desc">For drip or pour-over coffee methods such as V60 or Aeropress</p>
+                            </div>
+                        </label>
 
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">Cafetiére</h3>
-                            <p class="coffee_plan--card_desc">Course ground beans specially suited for french press
-                                coffee</p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio4">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">Cafetiére</h3>
+                                <p class="coffee_plan--card_desc">Course ground beans specially suited for french press coffee</p>
+                            </div>
+                        </label>
                     </div>
 
                     <div class="coffee_plan--info_title_box plan-toggler">
@@ -245,21 +274,29 @@
                     </div>
 
                     <div class="coffee_plan--card_box">
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">Every week</h3>
-                            <p class="coffee_plan--card_desc">$7.20 per shipment. Includes free first-class shipping.
-                            </p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio5">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">Every week</h3>
+                                <p class="coffee_plan--card_desc">$7.20 per shipment. Includes free first-class shipping.</p>
+                            </div>
+                        </label>
 
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">Every 2 weeks</h3>
-                            <p class="coffee_plan--card_desc">$9.60 per shipment. Includes free priority shipping.</p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio5">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">Every 2 weeks</h3>
+                                <p class="coffee_plan--card_desc">$9.60 per shipment. Includes free priority shipping.</p>
+                            </div>
+                        </label>
 
-                        <div class="coffee_plan--card">
-                            <h3 class="coffee_plan--card_title">Every month</h3>
-                            <p class="coffee_plan--card_desc">$12.00 per shipment. Includes free priority shipping.</p>
-                        </div>
+                        <label class="coffee_plan--card_wrapper">
+                            <input class="coffee_plan--radio" type="radio" name="plan_radio5">
+                            <div class="coffee_plan--card">
+                                <h3 class="coffee_plan--card_title">Every month</h3>
+                                <p class="coffee_plan--card_desc">$12.00 per shipment. Includes free priority shipping.</p>
+                            </div>
+                        </label>
                     </div>
 
                     <div class="coffee_plan--summary">
@@ -283,26 +320,26 @@
         </section>
     </main>
 
-    <!-- <section class="modal">
-        <div class="modal_wrapper">
-            <div class="modal_title--wrapper">
-                <h1 class="modal_title">order Summary</h1>
-            </div>
-            <div class="modal_content--wrapper">
-                <h3 class="modal_desc">“I drink my coffee as <span style="color: var(--primary-color)">Filter</span>, with a
-                    <span style="color: var(--primary-color)">Decaf</span> type of bean. <span
-                        style="color: var(--primary-color)">250g</span> ground ala <span
-                        style="color: var(--primary-color)">Cafetiére</span>,
-                    sent to me <span style="color: var(--primary-color)">Every Week</span>.”</h3>
-                <p class="modal_confirmation">Is this correct? You can proceed to checkout or go back to plan selection if
-                    something is off. Subscription discount codes can also be redeemed at the checkout. </p>
-                <div class="modal_checkout">
-                    <h3 class="modal_price">$14.00/ mo</h3>
-                    <div class="button">Checkout</div>
+    <section class="modal">
+            <div class="modal_wrapper">
+                <div class="modal_title--wrapper">
+                    <h1 class="modal_title">order Summary</h1>
+                </div>
+                <div class="modal_content--wrapper">
+                    <h3 class="modal_desc">“I drink my coffee as <span style="color: var(--primary-color)">Filter</span>, with a
+                        <span style="color: var(--primary-color)">Decaf</span> type of bean. <span
+                            style="color: var(--primary-color)">250g</span> ground ala <span
+                            style="color: var(--primary-color)">Cafetiére</span>,
+                        sent to me <span style="color: var(--primary-color)">Every Week</span>.”</h3>
+                    <p class="modal_confirmation">Is this correct? You can proceed to checkout or go back to plan selection if
+                        something is off. Subscription discount codes can also be redeemed at the checkout. </p>
+                    <div class="modal_checkout">
+                        <h3 class="modal_price">$14.00/ mo</h3>
+                        <div class="button">Checkout</div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section> -->
+        </section>
 
     <footer class="site-footer">
         <nav class="footer container">
